# interactive-natural-deduction

./: .gitignore  Makefile  README.md  canvas_test.html  editor.html  editor.js  lib_mvc.opam  natural-deduction.opam  nd.html  quiz.html  terms.html  terms.js  ulmus.opam
build-support/: OCamlSrcs.makefile  build  mlbindep.ml  of_merlin.ml
canvas_test/: .merlin  Canvas_test.ml  canvas_test.mlbin
editor/: editor.ml  editor_main.ml  focus_buffer.ml  focus_buffer.mli  focus_line.ml  focus_line.mli  jbuild  lexer.mll  line_annotator.ml  line_annotator.mli  viewport_buffer.ml
lib_mvc/: .merlin  Dynamic_HTML.ml  Dynamic_HTML.mli  Html.ml  jbuild  mvc.mllib
lib_ulmus/: Component.ml  Component.mli  DropDown.ml  DropDown.mli  Dynamic_HTML.ml  Dynamic_HTML.mli  Html.ml  jbuild  std.ml  with_history.ml  with_history.mli
quiz/: jbuild  quiz.ml
src/: .merlin  ClassicalPropositionalLogic.ml  Component.ml  Component.mli  DropDown.ml  DropDown.mli  Dynamic_HTML.ml  Dynamic_HTML.mli  Formula.ml  Formula.mli  Formula_ast.ml  Formula_lexer.mll  Formula_parser.mly  Html.mli  Main.ml  ProofTree.ml  ProofTree.mli  ProofTree_Serialiser.ml  ProofTree_UI.ml  ProofTree_UI.mli  Static_Html.ml  Static_Html.mli  jbuild  natural-deduction.html  natural-deduction.mlbin  schematic_rules.ml  unify.ml
terms/: jbuild  terms.ml  terms_main.ml
