opam-version: "1.2"
name: "natural-deduction"
version: "0.1"
maintainer: "Robert Atkey <bob.atkey@gmail.com>"
authors: "Robert Atkey <bob.atkey@gmail.com>"
license: "MIT"
build: [["jbuilder" "build" "-p" name "-j" jobs "@install"]]
depends: [ "jbuilder"
           "lib_mvc" ]
available: [ ocaml-version >= "4.04.0" ]
